email id changed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h2>I Can help.</h2>
       <h3>I'm Currently available for freelance work.</h3>
       <p>If you have aproject that you want to get started, I think you need my help with something or just fancy saying hey , then get in touch.</p>
-      <a class="btn" href="mailto:debabrata.bar1999@email.com">MESSAGE ME</a>
+      <a class="btn" href="mailto:debabrata.bar1999@gmail.com">MESSAGE ME</a>
       
     </div>
 
