--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="contact-me">
       <h2>I Can help.</h2>
       <h3>I'm Currently available for freelance work.</h3>
-      <p>If you have aproject that you want to get started, I think you need my help with something or just fancy saying hey , then get in touch.</p>
+      <p>If you have aproject that you want to get started, <br> I think you need my help with something or just fancy saying hey , <br> then get in touch.</p>
       <a class="btn" href="mailto:debabrata.bar1999@email.com">MESSAGE ME</a>
       
     </div>
