--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="profile">
       <img src="images/circle-cropped.png" alt="My_profile-1.jpg">
       <h2>Hi.</h2>
-      <p>I am A Computer Science Engineer. <br> Currently working as Programmer Analyst at Cognizant <br>
-        I have a Passion in Web designing and devlopement. <br> Also Interested in Cyber Security field.
+      <p>I am A Computer Science Engineer.  Currently working as Programmer Analyst at Cognizant 
+        I have a Passion in Web designing and devlopement.  Also Interested in Cyber Security field.
       </p>
     </div>
     <hr>
@@ -69,7 +69,7 @@
     <div class="contact-me">
       <h2>I Can help.</h2>
       <h3>I'm Currently available for freelance work.</h3>
-      <p>If you have aproject that you want to get started, <br> I think you need my help with something or just fancy saying hey , <br> then get in touch.</p>
+      <p>If you have aproject that you want to get started, but I think you need my help with something or just fancy saying hey , then get in touch.</p>
       <a class="btn" href="mailto:debabrata.bar1999@email.com">MESSAGE ME</a>
       
     </div>
